<resources>
    <string name="app_name">ToDoNoteApp</string>
    <string name="floating_action_button_add_notes">Floating Action Button Add Notes</string>
    <string name="image_no_data">Image No Data</string>
    <string name="no_notes_data">Please Add Note</string>
    <string name="title">Title</string>
    <string name="write_note">Write a note.....</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_low">Priority Low</string>
    <string name="check_add">Check Add</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>
    <string name="delete_all">Delete All</string>
    <string name="remove_success_message">Successfully Removed:</string>
    <string name="add_success_message">Successfully added.</string>
    <string name="update_success_message">Successfully Updated.</string>
    <string name="empty_field_message">Please fill out all fields.</string>
    <string name="dialog_title">Delete all data?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="dialog_confirmation_message">Are you sure you want to remove all data?</string>
    <string name="data_remove_success_message">Successfully Removed All Data</string>

    <!-- SPINNER PRIORITY -->
    <string-array name="spinner_priority">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
</resources>