<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="sharedVm"
            type="com.example.todonoteapp.presentation.viewmodel.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clFragmentList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.list.ListFragment">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
           />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabListFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:backgroundTint="@color/purple_500"
            android:contentDescription="@string/floating_action_button_add_notes"
            android:focusable="true"
            android:navigateToAddFragment="@{true}"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/ivNoDataIcon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:alpha="0.7"
            android:contentDescription="@string/image_no_data"
            android:emptyDatabase="@{sharedVm.isDatabaseEmpty}"
            android:src="@drawable/person"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35000000" />

        <TextView
            android:id="@+id/tvNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:alpha="0.7"
            android:emptyDatabase="@{sharedVm.isDatabaseEmpty}"
            android:text="@string/no_notes_data"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/ivNoDataIcon"
            app:layout_constraintStart_toStartOf="@+id/ivNoDataIcon"
            app:layout_constraintTop_toBottomOf="@+id/ivNoDataIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>