<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".presentation.add.AddFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAddNoteTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints="@string/title"
        android:background="@drawable/bg_edittext"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/title"
        android:inputType="textCapSentences"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/ship_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sAddNote"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:spinnerMode="dialog"
        android:background="@android:color/transparent"
        android:entries="@array/spinner_priority"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddNoteTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAddNoteMultiLine"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:autofillHints="Description"
        android:background="@drawable/bg_edittext"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start|top"
        android:hint="@string/write_note"
        android:inputType="textMultiLine"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/ship_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/sAddNote" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/save"
        android:layout_marginHorizontal="5dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddNoteMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>